week-6/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-management
  labels:
    app: employee-management
    week: "6"
